crates/solidity/testing/snapshots/bindings_output/modifiers/diamond/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected OpenBrace or Semicolon.
   ╭─[input.sol:2:18]
   │
 2 │     modifier foo virtual { _; }
   │                  ───────┬───────  
   │                         ╰───────── Error occurred here.
───╯
Error: Expected OpenBrace or Semicolon.
   ╭─[input.sol:6:18]
   │
 6 │     modifier foo virtual override { _; }
   │                  ────────────┬───────────  
   │                              ╰───────────── Error occurred here.
───╯
Error: Expected OpenBrace or Semicolon.
    ╭─[input.sol:10:18]
    │
 10 │     modifier foo virtual override { _; }
    │                  ────────────┬───────────  
    │                              ╰───────────── Error occurred here.
────╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  1 │ contract Base {
    │          ──┬─  
    │            ╰─── def: 1
  2 │     modifier foo virtual { _; }
    │              ─┬─  
    │               ╰─── def: 2
    │ 
  5 │ contract A is Base {
    │          ┬    ──┬─  
    │          ╰────────── def: 3
    │                 │   
    │                 ╰─── ref: 1
  6 │     modifier foo virtual override { _; }
    │              ─┬─  
    │               ╰─── def: 4
    │ 
  9 │ contract B is Base {
    │          ┬    ──┬─  
    │          ╰────────── def: 5
    │                 │   
    │                 ╰─── ref: 1
 10 │     modifier foo virtual override { _; }
    │              ─┬─  
    │               ╰─── def: 6
    │ 
 13 │ contract Test is B, A {
    │          ──┬─    ┬  ┬  
    │            ╰─────────── def: 7
    │                  │  │  
    │                  ╰───── ref: 5
    │                     │  
    │                     ╰── ref: 3
 14 │     function test() public foo {}
    │              ──┬─          ─┬─  
    │                ╰──────────────── def: 8
    │                             │   
    │                             ╰─── ref: 4
────╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │       ╭─▶ contract Base {
  2 │       │       modifier foo virtual { _; }
    │       │   ────────┬───────  
    │       │           ╰───────── definiens: 2
  3 │ │     ├─▶ }
    │ │     │       
    │ │     ╰─────── definiens: 1
  4 │ ╭───────▶ 
    ┆ ┆         
  6 │ │             modifier foo virtual override { _; }
    │ │         ────────┬───────  
    │ │                 ╰───────── definiens: 4
  7 │ ├─│ ────▶ }
    │ │ │           
    │ ╰───────────── definiens: 3
  8 │   ╭─────▶ 
    ┆   ┆       
 10 │   │           modifier foo virtual override { _; }
    │   │       ────────┬───────  
    │   │               ╰───────── definiens: 6
 11 │   ├─│ ──▶ }
    │   │ │         
    │   ╰─────────── definiens: 5
 12 │     ╭───▶ 
    ┆     ┆     
 14 │     │         function test() public foo {}
    │     │     ─────────────────┬────────────────  
    │     │                      ╰────────────────── definiens: 8
 15 │     ├───▶ }
    │     │         
    │     ╰───────── definiens: 7
────╯
